--- a/Music/musicapp/package.json
+++ b/Music/musicapp/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.0.0",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "prisma": "^6.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.17.9",
