--- a/Music/musicapp/package.json
+++ b/Music/musicapp/package.json
@@ -10,11 +10,18 @@
   },
   "dependencies": {
     "@prisma/client": "^6.0.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.465.0",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "prisma": "^6.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "shadcn-ui": "^0.9.3",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "youtube-search-api": "^1.2.2",
     "zod": "^3.23.8"
   },
