--- a/Music/musicapp/package.json
+++ b/Music/musicapp/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.0.3",
     "@prisma/client": "^6.0.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.465.0",
-    "next": "15.0.3",
+    "next": "^15.0.3",
     "next-auth": "^4.24.10",
     "prisma": "^6.0.0",
     "react": "^18.3.1",
